# ajylib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt
examples/chat_server/: CMakeLists.txt  chat_server_config.hpp  monitor_report_config.hpp  monitor_reporter.cpp  monitor_reporter.hpp  protocol.hpp
examples/chat_server/multi_thread/: chat_server.cpp  chat_server.hpp  main.cpp
examples/chat_server/single_thread/: chat_server.cpp  chat_server.hpp  main.cpp
examples/echo_server/: CMakeLists.txt  echo_server.cpp  echo_server.hpp  main.cpp  monitor_reporter.cpp  monitor_reporter.hpp
examples/monitor_server/: CMakeLists.txt  db_writer.cpp  db_writer.hpp  local_sampler.cpp  local_sampler.hpp  main.cpp  monitor_server.cpp  monitor_server.hpp  monitor_server_config.hpp  protocol.hpp
include/ajy/: windows.hpp
include/ajy/container/: ring_buffer.hpp  serialization_buffer.hpp  serialization_buffer.tpp
include/ajy/container/lockfree/: queue.hpp  queue.tpp  stack.hpp  stack.tpp
include/ajy/io/: output_device.hpp
include/ajy/io/stdio/: output_device.hpp
include/ajy/io/windows/: output_device.hpp
include/ajy/memory/: concepts.hpp  shared_types.hpp
include/ajy/memory/lockfree/: memory_pool.hpp  memory_pool.tpp  object_pool.hpp  object_pool.tpp
include/ajy/memory/threadlocal/: memory_pool.hpp  memory_pool.tpp
include/ajy/network/: server.hpp  server_console_commands.hpp
include/ajy/network/protocol/: net_packet_buffer.hpp  packet_buffer.hpp
include/ajy/network/protocol/obfuscator/: obfuscator.hpp
include/ajy/network/windows/iocp/: net_server.hpp  server.hpp
include/ajy/utility/: console.hpp  logger.hpp
include/ajy/utility/monitor/: monitor.hpp  monitor_console_commands.hpp  probe.hpp
include/ajy/utility/monitor/windows/: cpu_probe.hpp  memory_probe.hpp  network_probe.hpp
source/: windows.cpp
source/container/: ring_buffer.cpp  serialization_buffer.cpp
source/io/stdio/: output_device.cpp
source/io/windows/: output_device.cpp
source/network/: server_console_commands.cpp
source/network/protocol/: net_packet_buffer.cpp  packet_buffer.cpp
source/network/protocol/obfuscator/: obfuscator.cpp
source/network/windows/iocp/: net_server.cpp  server.cpp
source/utility/: console.cpp  logger.cpp
source/utility/monitor/: monitor.cpp  monitor_console_commands.cpp  probe.cpp
source/utility/monitor/windows/: cpu_probe.cpp  memory_probe.cpp  network_probe.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
tests/container/: ring_buffer_test.cpp  serialization_buffer_test.cpp
tests/container/lockfree/: queue_test.cpp  stack_test.cpp
tests/io/stdio/: output_device_test.cpp
tests/io/windows/: output_device_test.cpp
tests/memory/lockfree/: memory_pool_test.cpp  object_pool_test.cpp
tests/memory/threadlocal/: memory_pool_test.cpp
tests/network/protocol/: net_packet_buffer_test.cpp
tests/network/protocol/obfuscator/: obfuscator_test.cpp
tests/utility/: logger_test.cpp
